Fixed some Registration Issues
Fixed some Registration Issues on Control Manager and added the step views...

--- a/habboweb/16/11/web-gallery/styles/style.css
+++ b/habboweb/16/11/web-gallery/styles/style.css
@@ -41,6 +41,17 @@ input.process-button {
 	cursor: hand;
 }
 
+a.process-button {
+	background-color: #FC6303;
+	border: 2px solid black;
+	color: white;
+	font-weight: bold;
+	text-transform: uppercase;
+	cursor: pointer;
+    	text-decoration: none;
+	cursor: hand;
+}
+
 input.process-button:disabled {
 	background-color: #CCC;
 	border-color: #666;
