--- a/habboweb/17/16/web-gallery/styles/style.css
+++ b/habboweb/17/16/web-gallery/styles/style.css
@@ -634,7 +634,10 @@ img.tabmenu-image.coins {
 /* promo area ------------------------------------------------------------------- */
 
 #promoarea {
+	background: url(../images/promo_area/promo_background.png) no-repeat;
+	background-position: bottom left;
 	width: 429px;
+	height: 251px;
 	float: left;
 }
 
