Habbo Home Update content
Added some edit mode modules , and a BodyId param to controllerTemplate, with some image content...

--- a/habboweb/17/16/web-gallery/styles/myhabbo/boxes.css
+++ b/habboweb/17/16/web-gallery/styles/myhabbo/boxes.css
@@ -34,25 +34,25 @@
 	padding-right: 3px;
 }
 
-/*** BLUE ***/
+/*** DARK ***/
 
-.box.blue .box-header {
-	background: url(../../images/myhabbo/boxes/blue-tl.gif) no-repeat top left;
+.box.dark .box-header {
+	background: url(../../images/myhabbo/boxes/dark-tl.gif) no-repeat top left;
 	padding-left: 3px;
 }
 
-.box.blue .box-header div {
-	background: url(../../images/myhabbo/boxes/blue-tr.gif) no-repeat top right;
+.box.dark .box-header div {
+	background: url(../../images/myhabbo/boxes/dark-tr.gif) no-repeat top right;
 	height: 3px;
 }
 
-.box.blue .box-body {
-	background: url(../../images/myhabbo/boxes/blue-bl.gif) no-repeat bottom left;
+.box.dark .box-body {
+	background: url(../../images/myhabbo/boxes/dark-bl.gif) no-repeat bottom left;
 	padding-left: 3px;
 }
 
-.box.blue .box-content {
-	background: url(../../images/myhabbo/boxes/blue-br.gif) no-repeat bottom right;
+.box.dark .box-content {
+	background: url(../../images/myhabbo/boxes/dark-br.gif) no-repeat bottom right;
 	padding-bottom: 3px;
 	padding-right: 3px;
 }
