Finished languageManager module and Added some Install content and views

--- a/habboweb/17/16/web-gallery/styles/process.css
+++ b/habboweb/17/16/web-gallery/styles/process.css
@@ -46,8 +46,10 @@ body {
 #retrologo {
 	position: relative;
 	background-image: url(../images/logos/retrocms_logo_nourl.gif);
-	top: 15;
-	left: 5;
+	width: 113px;
+	height: 41px;
+	top: 15px;
+	left: 5px;
 }
 
 #steps {
