--- a/habboweb/17/16/web-gallery/styles/style.css
+++ b/habboweb/17/16/web-gallery/styles/style.css
@@ -543,7 +543,7 @@ img.tabmenu-image.coins {
 	padding: 0 8px 0 0 !important;
 	padding /**/: 10px 8px 0 0;
 	padding: 6px 8px 0 0;
-	text-shadow: black 2px 10px 2px 2px;	
+	text-shadow: black 2px 2px 2px;	
 }
 
 
