--- a/web/habboweb/17/16/web-gallery/styles/style.css
+++ b/web/habboweb/17/16/web-gallery/styles/style.css
@@ -575,6 +575,13 @@ img.tabmenu-image.coins {
 	font-size: 10px;
 }
 
+#submenu .subnav span {
+	float: right;
+ 	margin-top: 0px; 
+	margin-right: 20px; 
+	height: 14px;
+}
+
 #submenu .subnav a {
 	color: #000;
 	text-decoration: none;
