re-Added Hotel Nav

--- a/web/habboweb/17/16/web-gallery/styles/style.css
+++ b/web/habboweb/17/16/web-gallery/styles/style.css
@@ -524,7 +524,7 @@ img.tabmenu-image.coins {
 /* CUSTOM DISABLED TAGS :D */
 #mainmenu li#disabled a {
 	background-position: -19px -39px;
-	color: #8C7853;
+	color: #7b5b20;
 	height: 39px	!important;
 	height /**/: 27px;
 	height: 33px;
