Fixed some Layout Stuff and Validations
Fixed CSS for Disabled Nav, Fixed Translator for Hotel Nav, Added Hotel Status Validation for myHabbo Client url , Fixed a issue with home Visibility validation, added %url%/home view

--- a/web/habboweb/17/16/web-gallery/styles/style.css
+++ b/web/habboweb/17/16/web-gallery/styles/style.css
@@ -549,6 +549,14 @@ img.tabmenu-image.coins {
 	background-position: 100% -39px;
 }
 
+#mainmenu li#disabled a img{
+	vertical-align: middle;
+	padding: 0 !important;
+	padding /**/: 4px 0 0 0;
+	padding: 4px 0 0 0;
+   	filter: brightness(50%);
+}
+
 #mainmenu li#disabled.last .right {
 	width: 12px;
 	height: 39px;
